Submit and write file

--- a/index.html
+++ b/index.html
@@ -115,15 +115,12 @@
 
                         <div class="spacer-double"></div>
 
-                        <form name="rsvp" id='rsvp_form' class="form-underline" method="post" action="./writefile.php">
+                        <form name="rsvp" id='rsvp_form' class="form-underline" method="POST" action="rsvp.php">
                             <div class="col-md-4">
-                                <input type='text' name='Name' id='name' class="form-control" placeholder="Họ và tên" required maxlength="50">
+                                <input type='text' name='name' id='name' class="form-control" placeholder="Họ và tên" required maxlength="50">
                             </div>
-                            <!-- <div class="col-md-3">
-                                <input type='text' name='Email' id='email' class="form-control" placeholder="Your Email" required maxlength="50">
-                            </div> -->
                             <div class="col-md-4">
-                                <select id="which" name="Which" size="1" class="form-control">
+                                <select id="which" name="which" size="1" class="form-control">
                                     <option value="" disabled selected>Bạn tham dự buổi lễ nào?</option>
                                     <option>Cả 2 lun</option>
                                     <option>Lễ cưới nhà trai</option>
@@ -131,7 +128,7 @@
                                 </select>
                             </div>
                             <div class="col-md-4">
-                                <select id="guest" name="Guest" size="1" class="form-control">
+                                <select id="guest" name="guest" size="1" class="form-control">
                                     <option value="" disabled selected>Bạn đi bao nhiêu người nhỉ?</option>
                                     <option>1</option>
                                     <option>2</option>
@@ -140,13 +137,6 @@
                                     <option>5</option>
                                 </select>
                             </div>
-                            <!-- <div class="col-md-4">
-                                <select id="attend" name="Attend" size="1" class="form-control">
-                                    <option value="" disabled selected>Are you attending?</option>
-                                    <option>yes</option>
-                                    <option>no</option>
-                                </select>
-                            </div> -->
                             <div class="col-md-12 text-center">
                                 <div class="spacer-single"></div>
                                 <input type='submit' id='submit' value='Gửi' class="btn btn-custom">
@@ -155,8 +145,8 @@
                             </div>
                         </form>
                         <div id="success_message">
-                            <h1>Thank You!</h1>
-                            <p> We will get back to you soon. </p>
+                            <h1>Cảm ơn bạn!</h1>
+                            <p> Hẹn gặp lại bạn ở lễ cưới của chúng mình nhé! </p>
                         </div>
                         <div id="error_message">
                             <h1>Error</h1> Sorry there was an error sending your form.
