Test success function after call PHP

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         </form>
                         <div id="success_message">
                             <h1>Cảm ơn bạn!</h1>
-                            <p> Hẹn gặp lại bạn ở lễ cưới của chúng mình nhé! </p>
+                            <p class="pt10"> Hẹn gặp lại bạn ở lễ cưới của chúng mình nhaaaa. </p>
                         </div>
                         <div id="error_message">
                             <h1>Error</h1> Sorry there was an error sending your form.
