Add maps of Yen's homes

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
-                            <img src="images use/misc/3.jpg" alt="" class="img-responsive img-rounded wow fadeInLeft">
+                            <img src="https://goo.gl/maps/5hHUk5pRGoFith8x5" alt="" class="img-responsive img-rounded wow fadeInLeft">
                         </div>
 
                         <div class="col-md-5 col-md-offset-1 pt40 pb40 wow fadeIn" data-wow-delay=".5s">
