--- a/index.html
+++ b/index.html
@@ -283,13 +283,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
-                            <img src="https://goo.gl/maps/5hHUk5pRGoFith8x5" alt="" class="img-responsive img-rounded wow fadeInLeft">
+                            <img src="images use/misc/3.jpg" alt="" class="img-responsive img-rounded wow fadeInLeft">
                         </div>
 
                         <div class="col-md-5 col-md-offset-1 pt40 pb40 wow fadeIn" data-wow-delay=".5s">
                             <h3>Lễ cưới nhà gái</h3>
                             Thứ 2, ngày 08 tháng 5 năm 2023<br> 17:00 PM - 19:00 PM<br> 105 khu 14 thị trấn Lai Cách, Cẩm Giàng<br>
-                            <a href="" class="btn btn-custom mt30" target="_blank">Xem bản đồ</a>
+                            <a href="https://goo.gl/maps/5hHUk5pRGoFith8x5" class="btn btn-custom mt30" target="_blank">Xem bản đồ</a>
                         </div>
                     </div>
 
